--- a/Stck Figure Drawing Program.csproj
+++ b/Stck Figure Drawing Program.csproj
@@ -61,6 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormText.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormText.Designer.cs">
+      <DependentUpon>FormText.cs</DependentUpon>
+    </Compile>
     <Compile Include="Stick-Figure-Drawing.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StickFigureDimensions.cs" />
+    <EmbeddedResource Include="FormText.resx">
+      <DependentUpon>FormText.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Stick-Figure-Drawing.resx">
       <DependentUpon>Stick-Figure-Drawing.cs</DependentUpon>
     </EmbeddedResource>
